<resources>
    <string name="EditText_hint">Leo ROM</string>
    <string name="I_agree">I agree</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerate">One click Accelerate</string>
    <string name="action_style">Style</string>
    <string name="actionsdescription_blackcolor">description label color on a dark background</string>
    <string name="actionsdescription_custom">Official action description tag</string>
    <string name="actionsdescription_custom_enable">Enable power menu description label customization</string>
    <string name="actionsdescription_font">description label font style</string>
    <string name="actionsdescription_randomolor">description label random color</string>
    <string name="actionsdescription_size">description label text size</string>
    <string name="actionsdescription_whitecolor">description label color</string>
    <string name="actionslabel_blackcolor">label text color on a dark background</string>
    <string name="actionslabel_custom">official power menu label</string>
    <string name="actionslabel_custom_enable">Enable power menu label customization</string>
    <string name="actionslabel_font">label font style</string>
    <string name="actionslabel_randomolor">label random color</string>
    <string name="actionslabel_size">label font size</string>
    <string name="actionslabel_whitecolor">label color</string>
    <string name="actionsstate_blackcolor">status label text color dark background</string>
    <string name="actionsstate_custom">Official Power Menu Status Tab</string>
    <string name="actionsstate_custom_enable">Enable power menu status label customization</string>
    <string name="actionsstate_font">status label font style</string>
    <string name="actionsstate_randomolor">status label random color</string>
    <string name="actionsstate_size">status label text size</string>
    <string name="actionsstate_whitecolor">status label color</string>
    <string name="activity_componetname">Leo ROM prompt you：</string>
    <string name="alipay_custom">Alipay donation (custom amount)</string>
    <string name="alipay_default">Alipay donation (35 RMB)</string>
    <string name="alipay_default2">Alipay donation</string>
    <string name="alipay_wechat">Alipay and WeChat</string>
    <string name="analog_clock_dial_styt">Analog timetable</string>
    <string name="analogclock_color">color settings</string>
    <string name="app_clear">Create a one-click acceleration shortcut on the desktop</string>
    <string name="app_launcher_enabled">LeoTweaks desktop icon</string>
    <string name="app_launcher_enabled_no">Hide the desktop LeoTweaks icon</string>
    <string name="app_launcher_enabled_yes">Show the LeoTweaks icon on the desktop</string>
    <string name="app_theme">theme settings</string>
    <string name="battery_allow_standby_charge">custom color</string>
    <string name="battery_color">battery color(not support samsung stock icon)</string>
    <string name="battery_icon_download">Download more battery ICONS</string>
    <string name="battery_icon_size">charge icon size</string>
    <string name="battery_percentage">battery percentage</string>
    <string name="battery_standby_color">icon color</string>
    <string name="battery_text_size">percentage text size</string>
    <string name="battery_text_standby_color">percentage color</string>
    <string name="battery_text_title">size setting (not official)</string>
    <string name="carrier">carrier</string>
    <string name="custom_text_essage">input any text and enoji</string>
    <string name="custom_text_hint">example : Do your best , forget the rest</string>
    <string name="custom_text_title">edit text</string>
    <string name="custombattery_preference">custombattery preference</string>
    <string name="custombattery_preference_sumarry">Select more battery packs. You can also download more battery packs. If you are not satisfied with the battery pack we provide, you can also make your own favorite battery icon</string>
    <string name="default_colors">default:#E3FFFFFF</string>
    <string name="disable_stock_battery_icon">disable stock battery icon</string>
    <string name="dmesg_title">boot cat</string>
    <string name="fab_style">Fab button</string>
    <string name="font_style">Font style</string>
    <string name="kmesg_title">kernel cat</string>
    <string name="list_grid_carrier">Carrier</string>
    <string name="list_grid_other">Other</string>
    <string name="log_clean">clean up</string>
    <string name="log_clean_summary">delete the last crawl log file</string>
    <string name="log_it_share_type_title">share method</string>
    <string name="log_it_summary">please wait to cat the log</string>
    <string name="log_it_title">cat log</string>
    <string name="log_log">log item</string>
    <string name="log_summary">If the software FC appears this log must be crawled</string>
    <string name="logcat_title">Logcat</string>
    <string name="main_battery">battery icon switch</string>
    <string name="memory_click">Click to store information action</string>
    <string name="multi_size">Multi text size</string>
    <string name="notification_carrier">Notification bar operator switch</string>
    <string name="notification_carrier_color_enabled">Whether to allow custom carrier text color</string>
    <string name="notification_carrier_label_color">operator text color</string>
    <string name="notification_carrier_label_size">operator text size</string>
    <string name="off">off</string>
    <string name="on">ON</string>
    <string name="random_color">random color</string>
    <string name="random_color_summary">random select color</string>
    <string name="recents_memory">recent task storage information</string>
    <string name="recents_memory_click">Click to store information action</string>
    <string name="recents_memory_info_freecolor">Remaining available text color</string>
    <string name="recents_memory_info_refresh">refresh frequency</string>
    <string name="recents_memory_info_size">store information text size</string>
    <string name="recents_memory_info_textcolor">store information title color</string>
    <string name="recents_memory_info_usedcolor">Text color used</string>
    <string name="recents_tabs">store information</string>
    <string name="seek_summary">@string/seksbar_sumarry</string>
    <string name="seksbar_sumarry">seksbar sumarry</string>
    <string name="select_icon">select one icon what you like</string>
    <string name="show_text_set">show setting</string>
    <string name="single_off">Text show</string>
    <string name="single_size">Text size</string>
    <string name="status_bar_carrier_color">status bar carrier color</string>
    <string name="status_bar_carrier_color_enabled">enable carrier color change</string>
    <string name="status_bar_carrier_orientation">status bar carrier orientation</string>
    <string name="status_bar_carrier_show">show carrier</string>
    <string name="status_bar_carrier_string_multi">edit text②</string>
    <string name="status_bar_carrier_string_single">edit text ①</string>
    <string name="status_bar_carrier_style">carrier switch in status bar</string>
    <string name="status_bar_carrier_style_no">carrier</string>
    <string name="status_bar_carrier_style_yes">edit text</string>
    <string name="status_bar_logo">status bar logo</string>
    <string name="status_bar_logo_color">status bar logo color</string>
    <string name="status_bar_logo_style">status bar logo style</string>
    <string name="statusbar_logo_color_enabled">status bar logo color change</string>
    <string name="statusbar_logo_position">status bar logo position</string>
    <string name="statusbar_logo_size">status bar logo size</string>
    <string name="stroke_color">stroke color</string>
    <string name="stroke_color_summary">default color :#FF00BCD4</string>
    <string name="stroke_corners">stroke corners</string>
    <string name="stroke_gap">stroke gap</string>
    <string name="stroke_start">Stroke start</string>
    <string name="stroke_thickness">stroke thickness</string>
    <string name="stroke_width">stroke width</string>
    <string name="subtitle">title setting</string>
    <string name="subtitle_label">Custom subtitle text</string>
    <string name="subtitle_label_hint">"For example: don't forget your heart, you can always "</string>
    <string name="switch_donate">not donated tips</string>
    <string name="switch_donate_summary">The next time you start the Leo setting, the prompt will no longer be displayed</string>
    <string name="switch_donate_summary2">Show donation tips</string>
    <string name="switch_subtitle">Switch subtitle</string>
    <string name="tabs_battery">battery logo</string>
    <string name="tabs_icon_logo">icon logo</string>
    <string name="text_set">Text set</string>
    <string name="theme">themes</string>
    <string name="transparency_color">default color :#00000000</string>
    <string name="vibrator">allow Vibration feedback</string>
    <string name="vibrator_level">Vibration feedback level</string>
    <string name="vibrator_level_summary">swipe left and right level</string>
    <string name="white_color">default color :#ffffffff</string>
</resources>