<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:leo="http://schemas.android.com/apk/res/com.leo.salt">
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/list_grid_carrier" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/status_bar_carrier_show" android:key="leo_tweaks_status_bar_carrier" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/status_bar_carrier_style" android:key="leo_tweaks_status_bar_carrier_style" android:dependency="leo_tweaks_status_bar_carrier" android:defaultValue="false" android:summaryOn="@string/status_bar_carrier_style_yes" android:summaryOff="@string/status_bar_carrier_style_no" />
    <com.leo.salt.preference.CardPreferenceBorder />
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/show_text_set" android:key="leo_tweaks_carrier">
        <com.leo.salt.preference.MyListPreference android:entries="@array/statusbar_view_position_entries" android:title="@string/status_bar_carrier_orientation" android:key="leo_tweaks_status_bar_carrier_orientation" android:dependency="leo_tweaks_status_bar_carrier" android:defaultValue="1" android:entryValues="@array/statusbar_view_position_values" />
        <com.leo.salt.preference.MySwitchPreference android:title="@string/single_off" android:key="leo_tweaks_status_bar_carrier_single" android:dependency="leo_tweaks_status_bar_carrier" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.MySeekBarPreference android:title="@string/single_size" android:key="leo_tweaks_status_bar_carrier_single_size" android:summary="@string/seksbar_sumarry" android:dependency="leo_tweaks_status_bar_carrier_single" android:defaultValue="14" app:maxValue="20" app:minValue="10" app:unitsValue="sp" />
        <com.leo.salt.preference.MySeekBarPreference android:title="@string/multi_size" android:key="leo_tweaks_status_bar_carrier_multi_size" android:summary="@string/seksbar_sumarry" android:defaultValue="9" app:maxValue="10" app:minValue="5" app:reverseDependency="leo_tweaks_status_bar_carrier_single" app:unitsValue="sp" />
        <com.leo.salt.preference.CardPreferenceBorder />
    </com.leo.salt.preference.MyPreferenceCategory>
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/text_set" android:key="leo_tweaks_carrier2">
        <com.leo.salt.preference.MyListPreference android:entries="@array/font_style_entries" android:title="@string/font_style" android:key="leo_tweaks_status_bar_carrier_font" android:dependency="leo_tweaks_status_bar_carrier" android:defaultValue="0" android:entryValues="@array/font_style_values" />
        <com.leo.salt.preference.MyEditTextPreference android:persistent="true" android:hint="@string/custom_text_hint" android:title="@string/status_bar_carrier_string_single" android:key="leo_tweaks_status_bar_carrier_string_single" android:dependency="leo_tweaks_status_bar_carrier_style" android:defaultValue="不忘初心" android:dialogTitle="@string/custom_text_title" android:dialogMessage="@string/custom_text_essage" />
        <com.leo.salt.preference.MyEditTextPreference android:persistent="true" android:hint="@string/custom_text_hint" android:title="@string/status_bar_carrier_string_multi" android:key="leo_tweaks_status_bar_carrier_string_multi" android:dependency="leo_tweaks_status_bar_carrier_style" android:defaultValue="不忘初心" android:dialogTitle="@string/custom_text_title" android:dialogMessage="@string/custom_text_essage" app:reverseDependency="leo_tweaks_status_bar_carrier_single" />
        <com.leo.salt.preference.MySwitchPreference android:title="@string/status_bar_carrier_color_enabled" android:key="leo_tweaks_status_bar_carrier_color_enabled" android:dependency="leo_tweaks_status_bar_carrier" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.MySwitchPreference android:title="@string/random_color" android:key="leo_tweaks_status_bar_carrier_random_color" android:dependency="leo_tweaks_status_bar_carrier_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/random_color_summary" />
        <com.leo.salt.preference.ColorPickerPreference android:title="@string/status_bar_carrier_color" android:key="leo_tweaks_status_bar_carrier_color" android:summary="@string/default_colors" android:dependency="leo_tweaks_status_bar_carrier_color_enabled" leo:defaultColor="@color/status_bar_default_colors" app:reverseDependency="leo_tweaks_status_bar_carrier_random_color" />
    </com.leo.salt.preference.MyPreferenceCategory>
</PreferenceScreen>