<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:leo="http://schemas.android.com/apk/res/com.leo.salt">
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/recents_tabs" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/recents_memory" android:key="leo_tweaks_recents_memory" android:defaultValue="true" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/recents_memory_info_refresh" android:key="leo_tweaks_recents_memory_info_refresh" android:summary="@string/seksbar_sumarry" android:defaultValue="2500" app:maxValue="15000" app:minValue="200" app:unitsValue=" ms" />
    <com.leo.salt.preference.CardPreferenceBorder />
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/memory_click" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/recents_memory_click" android:key="leo_tweaks_recents_memory_click" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/vibrator" android:key="leo_tweaks_recents_memory_click_vibrator" android:dependency="leo_tweaks_recents_memory_click" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/vibrator_level" android:key="leo_tweaks_recents_memory_click_vibrator_level" android:summary="@string/vibrator_level_summary" android:dependency="leo_tweaks_recents_memory_click" android:defaultValue="20" app:maxValue="50" app:minValue="5" app:unitsValue="" />
    <com.leo.salt.preference.CardPreferenceBorder />
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/text_set" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/recents_memory_info_size" android:key="leo_tweaks_recents_memory_info_size" android:summary="@string/seek_summary" android:defaultValue="14" app:maxValue="20" app:minValue="5" app:unitsValue=" dp" />
    <com.leo.salt.preference.MyListPreference android:entries="@array/font_style_entries" android:title="@string/font_style" android:key="leo_tweaks_recents_memory_info_font" android:defaultValue="0" android:entryValues="@array/font_style_values" />
    <com.leo.salt.preference.ColorPickerPreference android:title="@string/recents_memory_info_textcolor" android:key="leo_tweaks_recents_memory_info_textcolor" android:summary="@string/white_color" leo:defaultColor="\#ffffffff" />
    <com.leo.salt.preference.ColorPickerPreference android:title="@string/recents_memory_info_usedcolor" android:key="leo_tweaks_recents_memory_info_usedcolor" android:summary="@string/white_color" leo:defaultColor="\#ffffffff" />
    <com.leo.salt.preference.ColorPickerPreference android:title="@string/recents_memory_info_freecolor" android:key="leo_tweaks_recents_memory_info_freecolor" android:summary="@string/white_color" leo:defaultColor="\#ffffffff" />
    <com.leo.salt.preference.CardPreferenceBorder />
    <com.leo.salt.preference.MyPreferenceCategory android:title="存储信息背景设置" />
    <com.leo.salt.preference.ColorPickerPreference android:title="背景颜色设置" android:key="leo_tweaks_recents_memory_info_bgcolor" android:summary="\#6033b5e5" leo:defaultColor="\#6033b5e5" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/stroke_start" android:key="leo_tweaks_recents_memory_stroke_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.ColorPickerPreference android:title="@string/stroke_color" android:key="leo_tweaks_recents_memory_stroke_color" android:summary="@string/stroke_color_summary" android:dependency="leo_tweaks_recents_memory_stroke_enabled" leo:defaultColor="\#00BCD4" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/stroke_thickness" android:key="leo_tweaks_recents_memory_stroke_thickness" android:summary="@string/seksbar_sumarry" android:dependency="leo_tweaks_recents_memory_stroke_enabled" android:defaultValue="6" app:maxValue="25" app:minValue="1" app:unitsValue=" um" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/stroke_width" android:key="leo_tweaks_recents_memory_stroke_width" android:summary="@string/seksbar_sumarry" android:dependency="leo_tweaks_recents_memory_stroke_enabled" android:defaultValue="3" app:maxValue="50" app:minValue="0" app:unitsValue=" um" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/stroke_gap" android:key="leo_tweaks_recents_memory_stroke_gap" android:summary="@string/seksbar_sumarry" android:dependency="leo_tweaks_recents_memory_stroke_enabled" android:defaultValue="6" app:maxValue="50" app:minValue="1" app:unitsValue=" um" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/stroke_corners" android:key="leo_tweaks_recents_memory_stroke_corner_radius" android:summary="@string/seksbar_sumarry" android:defaultValue="0" app:maxValue="60" app:minValue="0" app:unitsValue="  °" />
</PreferenceScreen>