<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:leo="http://schemas.android.com/apk/res/com.leo.salt">
    <com.leo.salt.preference.MyPreferenceCategory android:title="@string/tabs_icon_logo" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/status_bar_logo" android:key="leo_tweaks_status_bar_logo" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.DrawableListPreference android:title="@string/status_bar_logo_style" android:key="leo_tweaks_status_bar_logo_style" android:summary="@string/select_icon" android:dependency="leo_tweaks_status_bar_logo" android:defaultValue="0" app:drawableArray="@array/logo_style_drawables" app:entryList="@array/logo_style_entries" app:entryValuesList="@array/logo_style_values" />
    <com.leo.salt.preference.CardPreferenceBorder />
    <com.leo.salt.preference.MyListPreference android:entries="@array/statusbar_view_position_entries" android:title="@string/statusbar_logo_position" android:key="leo_tweaks_statusbar_logo_position" android:dependency="leo_tweaks_status_bar_logo" android:defaultValue="1" android:entryValues="@array/statusbar_view_position_values" />
    <com.leo.salt.preference.MySeekBarPreference android:title="@string/statusbar_logo_size" android:key="leo_tweaks_statusbar_logo_size" android:summary="@string/seksbar_sumarry" android:defaultValue="8" app:maxValue="10" app:minValue="2" app:unitsValue="sp" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/statusbar_logo_color_enabled" android:key="leo_tweaks_statusbar_logo_color_enabled" android:dependency="leo_tweaks_status_bar_logo" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.MySwitchPreference android:title="@string/random_color" android:key="leo_tweaks_statusbar_logo_random_color" android:dependency="leo_tweaks_statusbar_logo_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/random_color_summary" />
    <com.leo.salt.preference.ColorPickerPreference android:title="@string/status_bar_logo_color" android:key="leo_tweaks_status_bar_logo_color" android:summary="@string/default_colors" android:dependency="leo_tweaks_statusbar_logo_color_enabled" leo:defaultColor="@color/status_bar_default_colors" app:reverseDependency="leo_tweaks_statusbar_logo_random_color" />
</PreferenceScreen>